# Awesome-OpticalFlow

./: .gitignore  LICENSE  README.md
1. Matching Correspondences Estimation/AKAZE/: AKaze.h  源.cpp
1. Matching Correspondences Estimation/CPMFlow/CPM-Source/: main.cpp
1. Matching Correspondences Estimation/CPMFlow/CPM-Source/data/MPI-Sintel/: frame10_matches.txt  frame_0029_optflow.flo
1. Matching Correspondences Estimation/CPMFlow/CPM-Source/include/: ImageFeature.h  Stochastic.h  Util.h
1. Matching Correspondences Estimation/DeepMatching/: deep_matching.cpp  std.h
1. Matching Correspondences Estimation/DeepMatching/climb/: climb1.ppm
1. Matching Correspondences Estimation/DeepMatching/liberty/: demo.bat  liberty2.ppm
2. Sparse-to-dense Interpolation/DeepFlow/: image.c
2. Sparse-to-dense Interpolation/DeepFlow/MPI-Sintel/: matches-dm.txt
2. Sparse-to-dense Interpolation/EpicFlow/: epic_aux.cpp  epic_aux.h  epicflow.cpp  solver.c  variational.c
2. Sparse-to-dense Interpolation/EpicFlow-OldVersion/: epic_aux.cpp  epic_aux.h  variational.c
2. Sparse-to-dense Interpolation/EpicFlow-OldVersion/MPI-Sintel/: frame_0029_edges.txt
2. Sparse-to-dense Interpolation/RICFlow/: time-ricflow.txt
2. Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/: Fitting.h  OpticFlowIO.h  RIC.cpp
2. Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/include/: Util.h
3. Displacement Field Refinement/VariatinalEnhanced/: opticalflow_aux.c  solver.c
3. Displacement Field Refinement/ldof/: CVector.h  readme.txt
4. PostProcessingFiles/BenchMark/: CMakeLists.txt  evalFunc.cpp  evalFunc.hpp
4. PostProcessingFiles/BenchMark/optflow/EpicFlow/: frame_0029_optflow.flo
4. PostProcessingFiles/BenchMark/optflow/RicFlow/: frame_0029_optflow.flo
4. PostProcessingFiles/BenchMark/optflow/groundtruth/: frame_0029.flo
4. PostProcessingFiles/BinaryFileIO/: demo.txt
4. PostProcessingFiles/DrawFlow/: CMakeLists.txt
4. PostProcessingFiles/DrawFlow/imageLib/: CMakeLists.txt
4. PostProcessingFiles/GetEdges/: CMakeLists.txt  demo.sh
4. PostProcessingFiles/getdensity/: CMakeLists.txt
4. PostProcessingFiles/rename/: CMakeLists.txt  main.cpp
5. Tools/PngTest-Cmake/: main.cpp
5. Tools/PngTest-Task/: main.cpp
5. Tools/edgesDetect/: demo.sh
5. Tools/flo2png/: README.txt  demo.bat  flow_DeepFlow.flo  flow_Epic.flo
5. Tools/formatChange/: README.txt  demo.bat  demo.sh
DeepFlow/: ComputeFlow.h  Makefile  deepflow2.c  io.c  io.h  opticalflow.c
DeepFlow/MPI-Sintel/: optflow-df.flo
DeepMatching/: array_types.h  conv.cpp  io.cpp  main.cpp
DeepMatching/climb/: climb2.ppm  matches-cpm.txt
Displacement Field Refinement/VariatinalEnhanced/: opticalflow.h
Displacement Field Refinement/ldof/: CMatrix.h  COpticFlowPart.cpp  CTensor.h  Makefile  NMath.h
EpicFlow/: README  array_types.h  epic.cpp  io.h  solver.h  variational_aux.h
EpicFlow-OldVersion/: epic.cpp  epic.h  image.c  io.c  io.h  solver.h  variational.h  variational_aux.c  variational_aux.h
EpicFlow-OldVersion/MPI-Sintel/: frame_0029_matches.txt  frame_0029_optflow.flo
EpicFlow/MPI-Sintel/: demo.sh  frame_0029_optflow.flo
Matching Correspondences Estimation/AKAZE/: AKAZE.vcxproj  AKAZE.vcxproj.filters  AKaze.cpp
Matching Correspondences Estimation/CPMFlow/: CPMFlow.vcxproj  CPMFlow.vcxproj.filters
Matching Correspondences Estimation/CPMFlow/CPM-Source/: CPM.cpp  CPM.h  OpticFlowIO.h
Matching Correspondences Estimation/CPMFlow/CPM-Source/data/MPI-Sintel/: frame10_optflow.flo  frame_0017_matches.txt  frame_0017_optflow.flo
Matching Correspondences Estimation/CPMFlow/CPM-Source/include/: ImageIO.h  ImageProcessing.h  ImagePyramid.h  Vector.h
Matching Correspondences Estimation/DeepMatching/MPI-Sintel/: matches-dm.txt
Matching Correspondences Estimation/DeepMatching/climb/: demo.bat
Matching Correspondences Estimation/DeepMatching/include/: clapack.h
Matching Correspondences Estimation/DeepMatching/liberty/: liberty1.ppm
PngTest-Cmake/: image.c  io.c  zlibTest.cpp
PngTest-Task/: io.c  io.h
PostProcessingFiles/BenchMark/: demo.sh  eval.cpp
PostProcessingFiles/BenchMark/lib/: OpenCVModules-debug.cmake
PostProcessingFiles/BenchMark/optflow/ACPMFlow/: frame_0029_optflow.flo
PostProcessingFiles/BenchMark/optflow/DeepFlow/: frame_0029_optflow.flo
PostProcessingFiles/BenchMark/optflow/LDOF/: frame_0029_optflow.flo
PostProcessingFiles/BinaryFileIO/: main.cpp
PostProcessingFiles/DrawFlow/: README.txt  colorcode.cpp
PostProcessingFiles/GetEdges/: edges.txt
PostProcessingFiles/getdensity/: main.cpp
PostProcessingFiles/heatmap/: main.cpp
PostProcessingFiles/match2optflow/: CMakeLists.txt  main.cpp
PostProcessingFiles/match2optflow/lib/: OpenCVConfig.cmake
PostProcessingFiles/matchesfilter/: main.cpp
PostProcessingFiles/metrics/: CMakeLists.txt  main.cpp
PostProcessingFiles/rename/lib/: OpenCVModules-release.cmake  OpenCVModules.cmake
PostProcessingFiles/resize/: main.cpp
Sparse-to-dense Interpolation/DeepFlow/: README
Sparse-to-dense Interpolation/EpicFlow/: epic.h  io.c
Sparse-to-dense Interpolation/EpicFlow-OldVersion/: epicflow.cpp  image.h  solver.c
Sparse-to-dense Interpolation/RICFlow/: RICFlow.vcxproj  RICFlow.vcxproj.filters
Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/: RIC.h  SLIC.cpp  SLIC.h  main.cpp
Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/data/KITTI/: 000008_10_match.ric.flo
Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/data/MPI-Sintel/: matches.txt
Sparse-to-dense Interpolation/RICFlow/RICFlow-Source/include/: Image.h  ImageFeature.h  ImageProcessing.h  project.h
Tools/PngTest-Cmake/: CMakeLists.txt
Tools/edgesDetect/: README.txt  demo.bat
Tools/flo2png/: demo.sh  flow_ACPM.flo  flow_CPM.flo  flow_RIC.flo
Tools/formatChange/: 1.ppm  frame_0030.ppm
VariatinalEnhanced/: ComputeFlow.c  README.md
ldof/: CFilter.h  COpticFlowPart.h  CTensor4D.h  NMath.cpp  ldof.cpp
ldof/MPI-Sintel/: frame_0029.ppm  frame_0029LDOF.ppm
